@@ -372,7 +372,7 @@ void display_motd(const object *op);
 void send_rules(const object *op);
 void send_news(const object *op);
 int playername_ok(const char *cp);
-int add_player(socket_struct *ns);
+void add_player(socket_struct *ns);
 object *get_nearest_player(object *mon);
 int path_to_player(object *mon, object *pl, unsigned mindiff);
 void give_initial_items(object *pl, treasurelist *items);
@@ -385,9 +385,9 @@ void get_party_password(object *op, partylist *party);
 int roll_stat(void);
 void roll_stats(object *op);
 void roll_again(object *op);
-int key_roll_stat(object *op, char key);
-int key_change_class(object *op, char key);
-int key_confirm_quit(object *op, char key);
+void key_roll_stat(object *op, char key);
+void key_change_class(object *op, char key);
+void key_confirm_quit(object *op, char key);
 int check_pick(object *op);
 int fire_bow(object *op, object *arrow, int dir, int wc_mod, sint16 sx, sint16 sy);
 void fire(object *op, int dir);
